Reset last change.

--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
 
             <div class="quote">
             "Knowledge workers work best by getting into "flow", also known as being "in the zone", where they are fully concentrated on their work and fully tuned out of their environment [...]. This is when they get all of their productive work done."<br>
-            <a href="http://www.joelonsoftware.com/articles/fog0000000043.html" onclick="trackOutboundLink('http://www.joelonsoftware.com/articles/fog0000000043.html'); return false;">Joel Spolsky</a>
+            <a href="http://www.joelonsoftware.com/articles/fog0000000043.html">Joel Spolsky</a>
             </div>
 
             <div class="quote">
             "When you have a long stretch when you aren't bothered, you can get in the zone. The zone is when you are most productive [...]. It's when you aren't interrupted to answer a question or look up something or send an email or answer an im."<br>
-            <a href="https://gettingreal.37signals.com/ch07_Alone_Time.php" onclick="trackOutboundLink('https://gettingreal.37signals.com/ch07_Alone_Time.php'); return false;">37Signals</a>
+            <a href="https://gettingreal.37signals.com/ch07_Alone_Time.php">37Signals</a>
             </div>
 
             <h2>What is the Zone?</h2>
@@ -143,15 +143,15 @@
             </div>
 
             <div class="badge">
-	            <a href="https://itunes.apple.com/app/id921372070?mt=8" onclick="trackOutboundLink('https://itunes.apple.com/app/id921372070?mt=8&link=1'); return false;" target="_blank"></a>
+	            <a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank"></a>
             </div>
 
             <ul class="share-buttons">
-                <li><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Finthezoneapp.com&t=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity" target="_blank" title="Share on Facebook" onclick="trackOutboundLink('https://www.facebook.com/sharer/sharer.php?link=1'); return false;"><img src="images/Facebook.png"></a></li>
-                <li><a href="https://twitter.com/intent/tweet?source=http%3A%2F%2Finthezoneapp.com&text=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity:%20http%3A%2F%2Finthezoneapp.com&via=inthezone_app" target="_blank" title="Tweet" onclick="trackOutboundLink('https://twitter.com/intent/tweet?link=1'); return false;"><img src="images/Twitter.png"></a></li>
-                <li><a href="https://plus.google.com/share?url=http%3A%2F%2Finthezoneapp.com" target="_blank" title="Share on Google+" onclick="trackOutboundLink('https://plus.google.com/share?link=1'); return false;"><img src="images/Google+.png"></a></li>
-                <li><a href="http://www.reddit.com/submit?url=http%3A%2F%2Finthezoneapp.com&title=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity" target="_blank" title="Submit to Reddit" onclick="trackOutboundLink('http://www.reddit.com/submit?link=1'); return false;"><img src="images/Reddit.png"></a></li>
-                <li><a href="mailto:?subject=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity&body=In%20The%20Zone%20is%20a%20minimalist%20app%20and%20a%20powerful%20tool%20that%20helps%20you%20stay%20focused%20and%20improve%20your%20productivity:%20http%3A%2F%2Finthezoneapp.com" target="_blank" title="Email" onclick="trackOutboundLink('mailto:?link=1'); return false;"><img src="images/Email.png"></a></li>
+                <li><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Finthezoneapp.com&t=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity" target="_blank" title="Share on Facebook"><img src="images/Facebook.png"></a></li>
+                <li><a href="https://twitter.com/intent/tweet?source=http%3A%2F%2Finthezoneapp.com&text=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity:%20http%3A%2F%2Finthezoneapp.com&via=inthezone_app" target="_blank" title="Tweet"><img src="images/Twitter.png"></a></li>
+                <li><a href="https://plus.google.com/share?url=http%3A%2F%2Finthezoneapp.com" target="_blank" title="Share on Google+"><img src="images/Google+.png"></a></li>
+                <li><a href="http://www.reddit.com/submit?url=http%3A%2F%2Finthezoneapp.com&title=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity" target="_blank" title="Submit to Reddit"><img src="images/Reddit.png"></a></li>
+                <li><a href="mailto:?subject=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity&body=In%20The%20Zone%20is%20a%20minimalist%20app%20and%20a%20powerful%20tool%20that%20helps%20you%20stay%20focused%20and%20improve%20your%20productivity:%20http%3A%2F%2Finthezoneapp.com" target="_blank" title="Email"><img src="images/Email.png"></a></li>
             </ul>
 
             <h2>Screenshots</h2>
@@ -162,15 +162,15 @@
             <img width="240" height="360" src="images/screen5@2x.jpg">
 
             <div class="badge">
-	            <a href="https://itunes.apple.com/app/id921372070?mt=8" onclick="trackOutboundLink('https://itunes.apple.com/app/id921372070?mt=8&link=2'); return false;" target="_blank"></a>
+	            <a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank"></a>
             </div>
 
             <ul class="share-buttons">
-                <li><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Finthezoneapp.com&t=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity" target="_blank" title="Share on Facebook" onclick="trackOutboundLink('https://www.facebook.com/sharer/sharer.php?link=2'); return false;"><img src="images/Facebook.png"></a></li>
-                <li><a href="https://twitter.com/intent/tweet?source=http%3A%2F%2Finthezoneapp.com&text=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity:%20http%3A%2F%2Finthezoneapp.com&via=inthezone_app" target="_blank" title="Tweet" onclick="trackOutboundLink('https://twitter.com/intent/tweet?link=2'); return false;"><img src="images/Twitter.png"></a></li>
-                <li><a href="https://plus.google.com/share?url=http%3A%2F%2Finthezoneapp.com" target="_blank" title="Share on Google+" onclick="trackOutboundLink('https://plus.google.com/share?link=2'); return false;"><img src="images/Google+.png"></a></li>
-                <li><a href="http://www.reddit.com/submit?url=http%3A%2F%2Finthezoneapp.com&title=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity" target="_blank" title="Submit to Reddit" onclick="trackOutboundLink('http://www.reddit.com/submit?link=2'); return false;"><img src="images/Reddit.png"></a></li>
-                <li><a href="mailto:?subject=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity&body=In%20The%20Zone%20is%20a%20minimalist%20app%20and%20a%20powerful%20tool%20that%20helps%20you%20stay%20focused%20and%20improve%20your%20productivity:%20http%3A%2F%2Finthezoneapp.com" target="_blank" title="Email" onclick="trackOutboundLink('mailto:?link=2'); return false;"><img src="images/Email.png"></a></li>
+                <li><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Finthezoneapp.com&t=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity" target="_blank" title="Share on Facebook"><img src="images/Facebook.png"></a></li>
+                <li><a href="https://twitter.com/intent/tweet?source=http%3A%2F%2Finthezoneapp.com&text=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity:%20http%3A%2F%2Finthezoneapp.com&via=inthezone_app" target="_blank" title="Tweet"><img src="images/Twitter.png"></a></li>
+                <li><a href="https://plus.google.com/share?url=http%3A%2F%2Finthezoneapp.com" target="_blank" title="Share on Google+"><img src="images/Google+.png"></a></li>
+                <li><a href="http://www.reddit.com/submit?url=http%3A%2F%2Finthezoneapp.com&title=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity" target="_blank" title="Submit to Reddit"><img src="images/Reddit.png"></a></li>
+                <li><a href="mailto:?subject=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity&body=In%20The%20Zone%20is%20a%20minimalist%20app%20and%20a%20powerful%20tool%20that%20helps%20you%20stay%20focused%20and%20improve%20your%20productivity:%20http%3A%2F%2Finthezoneapp.com" target="_blank" title="Email"><img src="images/Email.png"></a></li>
             </ul>
 
             <h2>When to use this app?</h2>
@@ -203,15 +203,15 @@
             </div>
 
             <div class="badge">
-	            <a href="https://itunes.apple.com/app/id921372070?mt=8" onclick="trackOutboundLink('https://itunes.apple.com/app/id921372070?mt=8&link=3'); return false;" target="_blank"></a>
+	            <a href="https://itunes.apple.com/app/id921372070?mt=8" target="_blank"></a>
             </div>
 
             <ul class="share-buttons">
-                <li><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Finthezoneapp.com&t=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity" target="_blank" title="Share on Facebook" onclick="trackOutboundLink('https://www.facebook.com/sharer/sharer.php?link=3'); return false;"><img src="images/Facebook.png"></a></li>
-                <li><a href="https://twitter.com/intent/tweet?source=http%3A%2F%2Finthezoneapp.com&text=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity:%20http%3A%2F%2Finthezoneapp.com&via=inthezone_app" target="_blank" title="Tweet" onclick="trackOutboundLink('https://twitter.com/intent/tweet?link=3'); return false;"><img src="images/Twitter.png"></a></li>
-                <li><a href="https://plus.google.com/share?url=http%3A%2F%2Finthezoneapp.com" target="_blank" title="Share on Google+" onclick="trackOutboundLink('https://plus.google.com/share?link=3'); return false;"><img src="images/Google+.png"></a></li>
-                <li><a href="http://www.reddit.com/submit?url=http%3A%2F%2Finthezoneapp.com&title=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity" target="_blank" title="Submit to Reddit" onclick="trackOutboundLink('http://www.reddit.com/submit?link=3'); return false;"><img src="images/Reddit.png"></a></li>
-                <li><a href="mailto:?subject=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity&body=In%20The%20Zone%20is%20a%20minimalist%20app%20and%20a%20powerful%20tool%20that%20helps%20you%20stay%20focused%20and%20improve%20your%20productivity:%20http%3A%2F%2Finthezoneapp.com" target="_blank" title="Email" onclick="trackOutboundLink('mailto:?link=3'); return false;"><img src="images/Email.png"></a></li>
+                <li><a href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Finthezoneapp.com&t=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity" target="_blank" title="Share on Facebook"><img src="images/Facebook.png"></a></li>
+                <li><a href="https://twitter.com/intent/tweet?source=http%3A%2F%2Finthezoneapp.com&text=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity:%20http%3A%2F%2Finthezoneapp.com&via=inthezone_app" target="_blank" title="Tweet"><img src="images/Twitter.png"></a></li>
+                <li><a href="https://plus.google.com/share?url=http%3A%2F%2Finthezoneapp.com" target="_blank" title="Share on Google+"><img src="images/Google+.png"></a></li>
+                <li><a href="http://www.reddit.com/submit?url=http%3A%2F%2Finthezoneapp.com&title=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity" target="_blank" title="Submit to Reddit"><img src="images/Reddit.png"></a></li>
+                <li><a href="mailto:?subject=In%20The%20Zone%20-%20Stay%20Focused%20And%20Boost%20Your%20Productivity&body=In%20The%20Zone%20is%20a%20minimalist%20app%20and%20a%20powerful%20tool%20that%20helps%20you%20stay%20focused%20and%20improve%20your%20productivity:%20http%3A%2F%2Finthezoneapp.com" target="_blank" title="Email"><img src="images/Email.png"></a></li>
             </ul>
 
             <div class="links">
@@ -227,16 +227,6 @@
                     link.href = "//fonts.googleapis.com/css?family=Open+Sans:400italic,400,700";
                     document.querySelector("head").appendChild(link);
                 })();
-            </script>
-
-            <script>
-            var trackOutboundLink = function(url) {
-               ga('send', 'event', 'outbound', 'click', url, {'hitCallback':
-                 function () {
-                 document.location = url;
-                 }
-               });
-            }
             </script>
         </center>
     </body>
